syntax = "proto3";
package datanode.v2;

import "common/v1/common.proto";

option go_package = "github.com/razvanmarinn/datalake/protobuf/gen/go/datanode/v2;datanodev2";

service DataNodeService {
  rpc PushBlock(stream PushBlockRequest) returns (PushBlockResponse);
  rpc FetchBlock(FetchBlockRequest) returns (stream FetchBlockResponse);
  rpc GetWorkerInfo(GetWorkerInfoRequest) returns (GetWorkerInfoResponse);
  rpc DeleteBlock(DeleteBlockRequest) returns (DeleteBlockResponse);
  rpc GetBlockSize(GetBlockSizeRequest) returns (GetBlockSizeResponse);
}

message PushBlockRequest {
  oneof data {
    BlockMetadata metadata = 1;
    bytes chunk = 2;
  }
}

message BlockMetadata {
  string block_id = 1;
  int64 total_size = 2;

  repeated common.v1.BlockLocation downstream_pipelines = 3;
}

message PushBlockResponse {
  bool success = 1;
  string message = 2;
}

message FetchBlockRequest {
  string block_id = 1;

  int64 offset = 2;
  int64 limit = 3;
}

message FetchBlockResponse {
  bytes chunk = 1;
}

message GetWorkerInfoRequest {}

message GetWorkerInfoResponse {
  string worker_id = 1;
  string address = 2;
  int64 free_space = 3;
}

message DeleteBlockRequest {
  string block_id = 1;
}

message DeleteBlockResponse {
  bool success = 1;
  string message = 2;
}

message GetBlockSizeRequest {
  string block_id = 1;
}

message GetBlockSizeResponse {
  int64 size_bytes = 1;
  bool exists = 2;
}
