syntax = "proto3";
package ingestion.v1;

option go_package = "github.com/razvanmarinn/datalake/protobuf/gen/go/ingestion/v1;ingestionv1";

service WorkerService {
    rpc StoreBatchAvro(StoreBatchAvroRequest) returns (StoreBatchAvroResponse) {}
}

message StoreBatchAvroRequest {
    string batch_id = 1;
    bytes avro_data = 2;
    string owner_id = 3;
    string project_id = 4;
}

message StoreBatchAvroResponse {
    bool success = 1;
}